test/stdlib/array/array-out-of-bounds-access-negative.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

func main() -> int {
    var array = Array<int>();
    array.push(42);
    // CHECK: [[@LINE+1]]:19: error: invalid argument #1 type 'int' to 'Array<int>.[]', expected 'uint'
    return *array[-1];
}
